# StellarIDE

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.backup.yml  docker-compose.yml
backend/: .env.example  Cargo.toml  Dockerfile
backend/migrations/: 20240101000000_initial.sql  20240617000000_github_integration.sql  20240618000000_collaboration.sql  20240619000000_github_subfolder.sql  20240620000000_github_sync_sha.sql  20240621000000_github_pushes.sql
backend/src/: config.rs  errors.rs  main.rs
backend/src/db/: mod.rs
backend/src/handlers/: ai.rs  auth.rs  collab.rs  collaborators.rs  github.rs  health.rs  mod.rs  oauth.rs  projects.rs  search.rs  templates.rs  terminal.rs  verification.rs
backend/src/middleware/: auth.rs
backend/src/models/: github_push.rs  mod.rs  oauth_connection.rs  project.rs  project_file.rs  user.rs
backend/src/routes/: mod.rs
backend/src/services/: collab.rs  github.rs  mod.rs  oauth_github.rs  scout_audit.rs  soroban.rs  templates.rs  terminal.rs  verification.rs
frontend/: .env.example  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/public/: BingSiteAuth.xml  BingSiteAuth.xml:Zone.Identifier  android-chrome-192x192.png:Zone.Identifier  docs.pdf:Zone.Identifier  google2fbe30d26c56bd2d (1).html:Zone.Identifier  robots.txt  sitemap.xml
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: AiExplainPanel.jsx  AiFixPanel.jsx  AuditResultsPanel.jsx  BottomPanel.jsx  CollabEditor.jsx  Footer.jsx  (+17 more)
sandbox/: Dockerfile
(+71 files in other folders)
